--- a/index.html
+++ b/index.html
@@ -1682,6 +1682,15 @@
                 description: 'Carro con control de madera.',
                 specs: ['Material: Madera', 'pilas', 'STEM educativo', 'Para armar']
             },
+              //Soldadura
+            {
+                category: 'soldadura',
+                name: 'cautin',
+                price: 60,
+                image: '',
+                description: 'Temperatura. ajustable de 200 a 450 ° C',
+                specs: ["Voltaje de funcionamiento: 220 V/110 V, Potencia: 60W", "Tipo: Cautín tipo lapiz"]
+            },
 
             //Circuitos integrados
             {
