Update product names and add new items in index.html

--- a/index.html
+++ b/index.html
@@ -1685,11 +1685,35 @@
               //Soldadura
             {
                 category: 'soldadura',
-                name: 'cautin',
+                name: 'Cautin',
                 price: 60,
                 image: '',
                 description: 'Temperatura. ajustable de 200 a 450 ° C',
                 specs: ["Voltaje de funcionamiento: 220 V/110 V, Potencia: 60W", "Tipo: Cautín tipo lapiz"]
+            },
+              {
+                category: 'soldadura',
+                name: 'Cautin',
+                price: 80,
+                image: '',
+                description: 'Temperatura. ajustable de 200 a 450 ° C y puntas cambiables ',
+                specs: ["Voltaje de funcionamiento: 220 V/110 V, Potencia: 60W", "Tipo: Cautín tipo lapiz"]
+            },
+              {
+                category: 'soldadura',
+                name: 'Tercera mano con lupa',
+                price: 70,
+                image: '',
+                description: 'Soporte para sujetar Placa PCB de hierro multifuncional de alta Calidad Incluye lupa de cristal de 86mm diámetro, abrazaderas de sujeción y cocodrilos ajustables.',
+                specs: ["hierro,lupa de cristal", "86 mm de diametro"]
+            },
+                 {
+                category: 'soldadura',
+                name: 'Pasta para soldar',
+                price: 20,
+                image: '',
+                description: 'Esta pasta es de color ámbar y es completamente inodora e insoluble al agua No contiene plomo, lo que ayuda como limpiador el área a soldar sin agredir en el aspecto químico de los materiales intervenidos',
+                specs: [""]
             },
 
             //Circuitos integrados
