Modify prices and images for circuit components
Updated prices and images for circuit components.

--- a/index.html
+++ b/index.html
@@ -1720,8 +1720,8 @@
             {
                 category: 'circuitos',
                 name: '74LS00 (NAND 2 A 1)',
-                price: 3.5,
-                image: 'images/74ls00-nand-2-a-1.png',
+                price: 5,
+                image: 'images/74ls00.png',
                 description: 'NAND 2 A 1',
                 specs: ["Compuerta lógica", "Familia TTL", "Encapsulado DIP"]
             },
@@ -1729,7 +1729,7 @@
                 category: 'circuitos',
                 name: '74LS02 (NOR 2 A 1)',
                 price: 3.5,
-                image: 'images/74ls02-nor-2-a-1.png',
+                image: 'images/74ls02.png',
                 description: 'Circuito integrado 74LS02 (NOR 2 A 1)',
                 specs: ["Compuerta lógica", "Familia TTL", "Encapsulado DIP"]
             },
