--- a/index.html
+++ b/index.html
@@ -132,8 +132,25 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            filter: brightness(0.3);  /* Oscurece para leer el texto */
+            filter: brightness(0.2);  /* Oscurece para leer el texto */
             z-index: -1;
+        }
+        .hero::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(to bottom, 
+                rgba(10, 14, 39, 0.8) 0%, 
+                rgba(10, 14, 39, 0.6) 50%, 
+                rgba(10, 14, 39, 0.8) 100%);
+            z-index: 0;
+        }
+        .hero-content {
+            position: relative;
+            z-index: 1;
         }
                 
         @keyframes pulse {
@@ -183,10 +200,15 @@
         }
 
         .hero-subtitle {
-            font-size: 1.4rem;
-            color: #b0b0b0;
-            margin-bottom: 2rem;
-            animation: slideUp 0.8s ease-out 0.4s backwards;
+            font-size: 1.25rem;
+            color: #e8f0f8;  /* ← Texto más claro */
+            margin-bottom: 2.5rem;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+            line-height: 1.8;  /* ← Más espacio entre líneas */
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9);  /* ← Sombra fuerte */
+            font-weight: 400;  /* ← Un poco más grueso */
         }
 
         .hero-buttons {
