Update Open Graph meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATOM Electrónica y Robótica - Catálogo</title>
-    <meta property="og:title" content="ATOM Robótica - Tu Tienda de Electrónica 🔌">
-    <meta property="og:description" content="🚀 Arduino • ESP32 • Sensores • Motores y más. ✅ +100 productos disponibles. 📦 Envíos a toda Bolivia. 📍 El Alto, Villa Dolores">
+    <meta property="og:title" content="ATOM- Tu Tienda de componentes de Electrónica y Robótica 🔌">
+    <meta property="og:description" content="🚀 Arduino • ESP32 • Sensores • Motores y más. ✅ +100 productos disponibles. 📦 Envíos a toda Bolivia. 📍 El Alto">
     <meta property="og:image" content="https://atomrobotica1.github.io/Catalogo-Atom/images/banner.jpeg">
     <meta property="og:url" content="https://atomrobotica1.github.io/Catalogo-Atom/">
     <style>
