--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>ATOM Electrónica y Robótica - Catálogo</title>
     <meta property="og:title" content="ATOM- Tu Tienda de componentes de Electrónica y Robótica 🔌">
     <meta property="og:description" content="🚀 Arduino • ESP32 • Sensores • Motores y más. ✅ +100 productos disponibles. 📦 Envíos a toda Bolivia. 📍 El Alto">
-    <meta property="og:image" content="https://atomrobotica1.github.io/Catalogo-Atom/images/banner.jpeg">
-    <meta property="og:url" content="https://atomrobotica1.github.io/Catalogo-Atom/">
+    <meta property="og:image" content="https://atomrobotica1.github.io/Catalogo/images/banner.jpeg">
+    <meta property="og:url" content="https://atomrobotica1.github.io/Catalogo/">
     <style>
         * {
             margin: 0;
