Update image paths for circuit components

--- a/index.html
+++ b/index.html
@@ -1803,7 +1803,7 @@
                 category: 'circuitos',
                 name: '74LS14 (NOT)',
                 price: 3.5,
-                image: 'images/74ls14-not.png',
+                image: 'images/74ls14.png',
                 description: 'Circuito integrado 74LS14 (NOT)',
                 specs: ["Inversor lógico", "Familia TTL", "Encapsulado DIP"]
             },
@@ -2123,7 +2123,7 @@
                 category: 'circuitos',
                 name: 'NE555 TIMER',
                 price: 3.5,
-                image: 'images/ne555.png',
+                image: 'images/555.png',
                 description: 'Circuito integrado NE555 TIMER',
                 specs: ["Temporizador", "Versátil y popular", "Encapsulado DIP"]
             },
@@ -2163,7 +2163,7 @@
                 category: 'circuitos',
                 name: 'BC547 (Trans. NPN)',
                 price: 3.5,
-                image: 'images/bc547.png',
+                image: 'images/BC547.png',
                 description: 'Circuito integrado BC547 (Trans. NPN)',
                 specs: ["Transistor de potencia", "Propósito general", "Encapsulado DIP"]
             },
@@ -2171,7 +2171,7 @@
                 category: 'circuitos',
                 name: 'BC548 (Trans. NPN)',
                 price: 3.5,
-                image: 'images/bc548.png',
+                image: 'images/BC548.png',
                 description: 'Circuito integrado BC548 (Trans. NPN)',
                 specs: ["Transistor de potencia", "Propósito general", "Encapsulado DIP"]
             },
@@ -2179,7 +2179,7 @@
                 category: 'circuitos',
                 name: 'BC557 (Trans. PNP)',
                 price: 3.5,
-                image: 'images/bc557.png',
+                image: 'images/BC557.png',
                 description: 'Circuito integrado BC557 (Trans. PNP)',
                 specs: ["Transistor de potencia", "Propósito general", "Encapsulado DIP"]
             },
@@ -2187,7 +2187,7 @@
                 category: 'circuitos',
                 name: 'BC558 (Trans. PNP)',
                 price: 3.5,
-                image: 'images/bc558.png',
+                image: 'images/BC558.png',
                 description: 'Circuito integrado BC558 (Trans. PNP)',
                 specs: ["Transistor de potencia", "Propósito general", "Encapsulado DIP"]
             },
