--- a/index.html
+++ b/index.html
@@ -2307,7 +2307,7 @@
                 category: 'circuitos',
                 name: 'DIAC DB3 (Dispositivo Conmut.)',
                 price: 3.5,
-                image: 'images/diac.png',
+                image: 'images/db3.png',
                 description: 'Circuito integrado DIAC DB3 (Dispositivo Conmut.)',
                 specs: ["Control de potencia AC", "Encapsulado DIP"]
             },
@@ -2315,7 +2315,7 @@
                 category: 'circuitos',
                 name: 'TRIAC BT136 (Triac N)',
                 price: 3.5,
-                image: 'images/triac-bt136-triac-n.png',
+                image: 'images/bt136.png',
                 description: 'Circuito integrado TRIAC BT136 (Triac N)',
                 specs: ["Control de potencia AC", "Encapsulado DIP"]
             },
@@ -2323,7 +2323,7 @@
                 category: 'circuitos',
                 name: 'TRIAC BT137 (Triac N)',
                 price: 3.5,
-                image: 'images/triac-bt137-triac-n.png',
+                image: 'images/bt137.png',
                 description: 'Circuito integrado TRIAC BT137 (Triac N)',
                 specs: ["Control de potencia AC", "Encapsulado DIP"]
             },
@@ -2331,7 +2331,7 @@
                 category: 'circuitos',
                 name: 'TRIAC BT138 (Triac N)',
                 price: 3.5,
-                image: 'images/triac-bt138-triac-n.png',
+                image: 'images/bt138.png',
                 description: 'Circuito integrado TRIAC BT138 (Triac N)',
                 specs: ["Control de potencia AC", "Encapsulado DIP"]
             },
@@ -2339,7 +2339,7 @@
                 category: 'circuitos',
                 name: 'SCR BT169 (Rect. Silicio)',
                 price: 3.5,
-                image: 'images/scr-bt169-rect-silicio.png',
+                image: 'images/bt169.png',
                 description: 'Circuito integrado SCR BT169 (Rect. Silicio)',
                 specs: ["Control de potencia AC", "Encapsulado DIP"]
             },
@@ -2347,7 +2347,7 @@
                 category: 'circuitos',
                 name: 'SCR C106 (Rect. Silicio)',
                 price: 3.5,
-                image: 'images/scr-c106-rect-silicio.png',
+                image: 'images/scr 106.png',
                 description: 'Circuito integrado SCR C106 (Rect. Silicio)',
                 specs: ["Control de potencia AC", "Encapsulado DIP"]
             },
@@ -2355,7 +2355,7 @@
                 category: 'circuitos',
                 name: 'LM317 (Reg. Volt. Ajust.)',
                 price: 3.5,
-                image: 'images/lm317-reg-volt-ajust.png',
+                image: 'images/lm 317.png',
                 description: 'Circuito integrado LM317 (Reg. Volt. Ajust.)',
                 specs: ["Regulador de voltaje", "Regulador ajustable", "Encapsulado DIP"]
             },
@@ -2363,7 +2363,7 @@
                 category: 'circuitos',
                 name: 'LM7809 (Reg. Volt. 9V)',
                 price: 3.5,
-                image: 'images/lm7809-reg-volt-9v.png',
+                image: 'images/lm7809.png',
                 description: 'Circuito integrado LM7809 (Reg. Volt. 9V)',
                 specs: ["Regulador de voltaje", "Regulador fijo", "Encapsulado DIP"]
             },
@@ -2371,7 +2371,7 @@
                 category: 'circuitos',
                 name: 'LM7812 (Reg. Volt. 12V)',
                 price: 3.5,
-                image: 'images/lm7812-reg-volt-12v.png',
+                image: 'images/lm7812.png',
                 description: 'Circuito integrado LM7812 (Reg. Volt. 12V)',
                 specs: ["Regulador de voltaje", "Regulador fijo", "Encapsulado DIP"]
             },
@@ -2379,7 +2379,7 @@
                 category: 'circuitos',
                 name: 'LM7806 (Reg. Volt. 6V)',
                 price: 3.5,
-                image: 'images/lm7806-reg-volt-6v.png',
+                image: 'images/lm7806.png',
                 description: 'Circuito integrado LM7806 (Reg. Volt. 6V)',
                 specs: ["Regulador de voltaje", "Regulador fijo", "Encapsulado DIP"]
             },
@@ -2387,7 +2387,7 @@
                 category: 'circuitos',
                 name: 'LM7805 (Reg. Volt. 5V)',
                 price: 3.5,
-                image: 'images/lm7805-reg-volt-5v.png',
+                image: 'images/lm7805.png',
                 description: 'Circuito integrado LM7805 (Reg. Volt. 5V)',
                 specs: ["Regulador de voltaje", "Regulador fijo", "Encapsulado DIP"]
             },
@@ -2395,7 +2395,7 @@
                 category: 'circuitos',
                 name: 'L293D (Control Motor)',
                 price: 3.5,
-                image: 'images/l293d-control-motor.png',
+                image: 'images/l293d.png',
                 description: 'Circuito integrado L293D (Control Motor)',
                 specs: ["Encapsulado DIP"]
             }
