Adjust product prices and remove badge
Updated prices for various products and removed a badge.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -853,7 +855,6 @@
                 name: 'Raspberry PI Pico W',
                 price: 145,
                 image: 'images/raspberry-pico.png',
-                badge: 'POPULAR',
                 description: 'Microcontrolador compacto con Wi-Fi integrado.',
                 specs: ['Procesador RP2040 dual-core', 'Entrada USB', '26 pines GPIO', 'Compatible con MicroPython']
             },
@@ -884,15 +885,15 @@
             {
                 category: 'placas',
                 name: 'Arduino Nano V3.0',
-                price: 55,
+                price: 50,
                 image: 'images/nano.png',
                 description: 'Versión compacta del Arduino para prototipos.',
-                specs: ['ATmega328P 16 MHz', 'Pines soldados y sin soldar', 'USB CH340', 'Cable tipo C','Version pines soldados: 60 Bs']
+                specs: ['ATmega328P 16 MHz', 'Pines soldados y sin soldar', 'USB CH340', 'Cable tipo C','Version pines soldados: 55 Bs']
             },
             {
                 category: 'placas',
                 name: 'PIC16877A',
-                price: 75,
+                price: 70,
                 image: 'images/pic16f.png',
                 description: 'Microcontrolador PIC16F877A DIP40 original.',
                 specs: ['Voltaje de operación:  4V a 5.5V', 'Numero de I/O: 33', 'RAM: 368 Bytes', 'Comparadores: 2 ADC 8 ch, 10-bit']
@@ -908,7 +909,7 @@
             {
                 category: 'placas',
                 name: 'ESP32 CAM, cámara: OV2640',
-                price: 160,
+                price: 150,
                 image: 'images/espcam.png',
                 description: 'El Arduino Mega 2560 es una placa electrónica basada en el microcontrolador ATmega2560',
                 specs: ['Admite camaras: OV2640 y OV7670', 'Interfaz de programación:  MicroUSB CH340', 'RAM: 520KB SRAM+4M PSRAM', 'Wifi: 802.11 b/g/n']
@@ -919,7 +920,7 @@
             {
                 category: 'sensores',
                 name: 'DHT22 Temperatura y Humedad',
-                price: 30,
+                price: 26,
                 image: 'images/dht22.png',
                 description: 'Sensor preciso para medir temperatura y humedad.',
                 specs: ['Temp: -40°C a +80°C', 'Humedad: 0-100%', 'Voltaje: 3.3V-6V', 'Salida digital']
@@ -927,7 +928,7 @@
             {
                 category: 'sensores',
                 name: 'Módulo DHT11 Temperatura y Humedad',
-                price: 24,
+                price: 23,
                 image: 'images/dht11.png',
                 description: 'Sensor preciso para medir temperatura y humedad.',
                 specs: ['Temp: 0°C a +50°C', 'Humedad: 20-90%', 'Voltaje: 3.3V-5.5V', 'Salida 4 pines']
@@ -991,7 +992,7 @@
             {
                 category: 'sensores',
                 name: 'Sensor de Temperatura RTD PT100 (3 hilos)',
-                price: 70,
+                price: 90,
                 image: 'images/pt100.png',
                 description: 'Detector de temperatura por resistencia (RTD) de alta precisión, fabricado con platino, que ofrece una resistencia de \(100\ \Omega \) a \(0\text{\degree C}\). La configuración de 3 hilos compensa la resistencia de los cables, garantizando mediciones estables y precisas.',
                 specs: ['Rangos comunes de -50°C a +200°C', 'Conexión: 3 Hilos', 'Dimensiones: 4x30 mm', 'Clase: A']
@@ -1074,7 +1075,7 @@
             {
                 category: 'motores',
                 name: 'Servo SG90 Plástico 180°',
-                price: 25,
+                price: 23,
                 image: 'images/sg90.png',
                 description: 'Servo económico para proyectos educativos.',
                 specs: ['Voltaje: 4.8V-6V', '180°', 'Peso: 9g', 'Ideal estudiantes']
@@ -1082,7 +1083,7 @@
             {
                 category: 'motores',
                 name: 'Motor Paso a Paso + ULN2003',
-                price: 29,
+                price: 26,
                 image: 'images/motorpap.png',
                 description: 'Motor paso a paso con driver incluido.',
                 specs: ['Tipo: 28BYJ-48', 'Driver: ULN2003', 'Voltaje: 5V', 'Alta precisión']
@@ -1098,7 +1099,7 @@
             {
                 category: 'motores',
                 name: 'Motor reductor DC 1:48',
-                price: 16,
+                price: 15,
                 image: 'images/motoreductor.png',
                 description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
                 specs: ['Voltaje: 3V-6V', 'Relación 1:48', 'Bidireccional']
@@ -1106,7 +1107,7 @@
              {
                 category: 'motores',
                 name: 'Motor reductor DC 1:120',
-                price: 20,
+                price: 17.5,
                 image: 'images/motoreductor.png',
                 description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
                 specs: ['Voltaje: 3V-6V', 'Relación 1:120', 'Bidireccional']
@@ -1114,7 +1115,7 @@
              {
                 category: 'motores',
                 name: 'Motor DC Motorreductor 1:220',
-                price: 22,
+                price: 20,
                 image: 'images/motoreductor.png', 
                 description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
                 specs: ['Voltaje: 3V-6V', 'Relación 1:220', 'Bidireccional']
@@ -1130,7 +1131,7 @@
              {
                 category: 'motores',
                 name: 'Micro Motor 500 RPM DC',
-                price: 55,
+                price: 50,
                 image: 'images/micromotor.png',
                 description: 'Motor electrico de alta calidad y peso ligero, beneficiado de alto par y bajo ruido, pequeño volumen, gran torsión.',
                 specs: ['Voltaje: 3V-6V', 'Corriente: 160 mA', 'Dimensiones: 24 x 10 x 12 mm', 'Peso: 15g']
@@ -1145,8 +1146,8 @@
             },
                 {
                 category: 'motores',
-                name: 'Motor NEMA 17 paso a paso',
-                price: 160,
+                name: 'Motor NEMA 17 paso a paso 42BYG40',
+                price: 140,
                 image: 'images/nema.png',
                 description: 'Este motor stepper es ideal para proyectos de impresoras 3D y máquinaria CNC gracias a su precisión de giro y facilidad de control. (Imagenes referenciales) ',
                 specs: ['Voltaje Nominal: 3,27V', '80 grados máximo (corriente nominal, 2 fases)', 'Corriente Nominal: 1,68A', 'Total inercia kg.m.m: 57g.m.m']
@@ -1162,7 +1163,7 @@
              {
                 category: 'motores',
                 name: 'rueda amarilla',
-                price: 16,
+                price: 8,
                 image: 'images/ruedaamarilla.png',
                 description: 'Rueda para coche Robot para Arduino mejor Calidad,',
                 specs: ['Diametro: 63 mm', 'Espesor: 28 mm', 'Par']
@@ -1170,7 +1171,7 @@
                 {
                 category: 'motores',
                 name: 'Rueda loca',
-                price: 9,
+                price: 8,
                 image: 'images/ruedaloca.png',
                 description: 'Rueda Loca Para Proyectos escolares de robótica y electrónica,',
                 specs: ['rueda']
@@ -1181,7 +1182,7 @@
             {
                 category: 'modulos',
                 name: 'Módulo Relé 1 Canal 5V',
-                price: 15,
+                price: 14,
                 image: 'images/relay1c.png',
                 description: 'Controla dispositivos de corriente alterna.',
                 specs: ['Voltaje: 5V', '1 Canal', 'Capacidad: 10A/250VAC', 'Optoacoplador']
@@ -1189,7 +1190,7 @@
               {
                 category: 'modulos',
                 name: 'Módulo Relé 2 Canales 5V',
-                price: 26,
+                price: 23,
                 image: 'images/relay2c.png',
                 description: 'Controla hasta 2 dispositivos independientes.',
                 specs: ['Voltaje: 5V', '2 Canales', '10A por canal', 'Con optoacopladores']
@@ -1205,15 +1206,15 @@
             {
                 category: 'modulos',
                 name: 'Conversor CP2102 USB a TTL',
-                price: 21,
+                price: 20,
                 image: 'images/usbttl.png',
                 description: 'Adaptador USB a serial TTL UART.',
                 specs: ['USB 2.0', 'IC: CP2102', 'Pines: 5', 'Compatible 3.3V y 5V']
             },
             {
                 category: 'modulos',
-                name: 'Reductor Voltaje LM2596',
-                price: 25,
+                name: 'Regulador de Voltaje',
+                price: 24,
                 image: 'images/reguladorvoltaje.png',
                 description: 'Fuente reductora ajustable de voltaje.',
                 specs: ['Entrada: 12V-24V', 'Salida: 1.25V-5V', 'Corriente: 3A máx', 'Eficiente']
@@ -1229,16 +1230,15 @@
             {
                 category: 'modulos',
                 name: 'Driver L298N Puente H',
-                price: 26,
-                badge: 'POPULAR',
+                price: 25,
                 image: 'images/l298.png',
                 description: 'Controla 2 motores DC o 1 paso a paso.',
                 specs: ['Voltaje: 5V-35V', 'Corriente: 2A/canal', 'Regulador 5V', 'Con diodos']
             },
             {
                 category: 'modulos',
-                name: 'Shield CNC / Impresora 3D',
-                price: 28,
+                name: 'Shield CNC / Impresora 3D v3.0',
+                price: 30,
                 image: 'images/shield.png',
                 description: 'Shield para controlar motores paso a paso.',
                 specs: ['Compatible GRBL', '4 ejes (X,Y,Z,A)', '6 finales carrera', 'Para CNC']
@@ -1246,7 +1246,7 @@
             {
                 category: 'modulos',
                 name: 'Driver A4988 Paso a Paso',
-                price: 17,
+                price: 19,
                 image: 'images/a4988.png',
                 description: 'Driver Pololu para motores paso a paso.',
                 specs: ['Voltaje: 8V-35V', 'Corriente: 2A máx', 'Microstepping 1/16', 'Compacto']
@@ -1254,7 +1254,7 @@
              {
                 category: 'modulos',
                 name: 'Driver DRV8825 motor paso a paso',
-                price: 25,
+                price: 22,
                 image: 'images/ddrv.png',
                 description: 'Este controlador de motores paso a paso bipolares esta basado en el chip DRV8825 de Texas Instruments y permite controlar motores de hasta 1.5A por canal 2.2A max con suficiente ventilación. Tiene los mismos pines que los famosos A4988 de Pololu por lo que es posible reemplazarlo por este modelo sin modificaciones.',
                 specs: ['Voltaje de operación: 8.2 - 45 V', 'Corriente de salida: 1.5A por fase A2 2.2A A3', 'Voltaje lógico mínimo: 2.5V max: 5.25V', 'Microstepping: full, 1/2, 1/4, 1/8, 1/16 y 1/32']
@@ -1262,7 +1262,7 @@
                {
                 category: 'modulos',
                 name: 'ESP 8266',
-                price: 30,
+                price: 28,
                 image: 'images/esp8266.png',
                 description: 'El ESP8266 tiene potentes capacidades a bordo de procesamiento y almacenamiento que le permiten integrarse con sensores y dispositivos específicos de aplicación a traves de sus GPIOs con un desarrollo mínimo y carga mínima durante el tiempo de ejecución. Su alto grado de integración en el chip permite una circuitería externa mínima, y la totalidad de la solución, incluyendo el módulo esta diseñado para ocupar el area mínima en un PCB.',
                 specs: ['Voltaje de Entradas/Salidas: 3.3V DC', 'Comunicación tipo de interfaz: Serial, UART', 'CPU de 32 bits', 'Frecuencia de Reloj: 80MHz/160MHz']
@@ -1278,7 +1278,7 @@
               {
                 category: 'modulos',
                 name: 'CONTROL REMOTO INALÁMBRICO HX1838',
-                price: 23,
+                price: 24,
                 image: 'images/control.png',
                 description: 'El Kit Sensor IR HX1838 con control inalambrico Arduino, cuenta con un control remoto NO INCLUYE BATERíAS, led infrarrojo transmisor, 3 cables dupont cortos hembra-hembra y el módulo KY-022, esta diseñado para detectar frecuencias de 38kHz.',
                 specs: ['Voltaje de alimentación: 2.7V a 5.5 V', 'Corriente de funcionamiento: 0.4 mA a 1.5 mA', 'Frecuencia de operación: 38kHz', 'Angulo efectivo de recepción: 45 ° de ambos lados a partir de la linea directa entre el transmisor y receptor']
