--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@
                 price: 8,
                 image: 'images/ruedaamarilla.png',
                 description: 'Rueda para coche Robot para Arduino mejor Calidad,',
-                specs: ['Diametro: 63 mm', 'Espesor: 28 mm', 'Par']
+                specs: ['Diametro: 63 mm', 'Espesor: 28 mm',]
             },
                 {
                 category: 'motores',
@@ -1602,7 +1602,7 @@
             {
                 category: 'componentes',
                 name: 'Diodo semiconductor',
-                price: 2.5,
+                price: 2,
                 image: 'images/diodos.png',
                 description: 'Diodo para rectificación y protección.',
                 specs: ['Modelos: 1N4148, 1N4007, 1N5819, 1N5399, 1N5408, 1N5822, FR107, FR207']
@@ -1645,7 +1645,8 @@
                 category: 'kits',
                 name: 'Kit Brazo con Gripper',
                 price: 60,
-                badge: 'STEM',
+    
+                image: 'images/brazo.png',
                 description: 'Brazo robótico educativo de madera.',
                 specs: ['Material: Madera', 'Para armar', 'Proyecto educativo', 'Con pinza']
             },
@@ -1653,6 +1654,7 @@
                 category: 'kits',
                 name: 'Kit Grúa',
                 price: 60,
+                image: 'images/grua.png',
                 description: 'Grúa pequeña DIY, proyecto STEM.',
                 specs: ['Material: Madera', 'Educativo', 'Fácil armado', 'Ciencia DIY']
             },
@@ -1660,7 +1662,7 @@
                 category: 'kits',
                 name: 'Kit Coche 2WD',
                 price: 85,
-                badge: 'COMPLETO',
+                image: 'images/coche2.png',
                 description: 'Kit completo para coche robot de 2 ruedas.',
                 specs: ['Chasis incluido', '2 motorreductores', '2 ruedas + loca', 'Todo incluido']
             },
@@ -1668,7 +1670,7 @@
                 category: 'kits',
                 name: 'Kit Coche 4WD',
                 price: 150,
-                badge: 'COMPLETO',
+                image: 'images/coche4.png',
                 description: 'Kit completo para coche robot de 4 ruedas.',
                 specs: ['Chasis incluido', '4motorreductores', '4 ruedas', 'Todo incluido']
             },
@@ -1676,6 +1678,7 @@
                 category: 'kits',
                 name: 'Kit Auto Bombero',
                 price: 55,
+                image: 'images/bombero.png',
                 description: 'Kit de auto robótico educativo.',
                 specs: ['Chasis incluido', 'Educativo', 'Fácil armado', 'Proyecto escolar']
             },
@@ -1683,7 +1686,7 @@
                 category: 'kits',
                 name: 'Kit Triceratops RC',
                 price: 60,
-                badge: 'RC',
+                image: 'images/triceratops.png',
                 description: 'Dinosaurio de madera con control remoto.',
                 specs: ['Material: Madera 3D', 'Control remoto', 'STEM educativo', 'RS6400']
             },
@@ -1691,6 +1694,7 @@
                 category: 'kits',
                 name: 'Kit Elevador Hidráulico',
                 price: 55,
+                image: 'images/elevador.png',
                 description: 'Plataforma elevadora hidráulica de madera.',
                 specs: ['Material: Madera', 'Hidráulico', 'STEM educativo', 'Para armar']
             },
@@ -1698,6 +1702,7 @@
                 category: 'kits',
                 name: 'Kit Avion',
                 price: 55,
+                image: 'images/avion.png',
                 description: 'Avion con elice de madera .',
                 specs: ['Material: Madera', 'pilas', 'STEM educativo', 'Para armar']
             },
@@ -1705,31 +1710,32 @@
                 category: 'kits',
                 name: 'Kit carro con control',
                 price: 65,
+                image: 'images/cochecontrol.png',
                 description: 'Carro con control de madera.',
                 specs: ['Material: Madera', 'pilas', 'STEM educativo', 'Para armar']
             },
               //Soldadura
             {
                 category: 'soldadura',
-                name: 'Cautin',
+                name: 'Cautin regulable 60W',
                 price: 60,
-                image: '',
+                image: 'images/cautin.png',
                 description: 'Temperatura. ajustable de 200 a 450 ° C',
                 specs: ["Voltaje de funcionamiento: 220 V/110 V, Potencia: 60W", "Tipo: Cautín tipo lapiz"]
             },
               {
                 category: 'soldadura',
-                name: 'Cautin',
+                name: 'Kit Cautin regulable + puntas intercambiables',
                 price: 80,
-                image: '',
-                description: 'Temperatura. ajustable de 200 a 450 ° C y puntas cambiables ',
+                image: 'images/cautin2.png',
+                description: 'Temperatura. ajustable de 200 a 450 ° C y puntas cambiables,  ',
                 specs: ["Voltaje de funcionamiento: 220 V/110 V, Potencia: 60W", "Tipo: Cautín tipo lapiz"]
             },
               {
                 category: 'soldadura',
                 name: 'Tercera mano con lupa',
                 price: 70,
-                image: '',
+                image: 'lupa.png',
                 description: 'Soporte para sujetar Placa PCB de hierro multifuncional de alta Calidad Incluye lupa de cristal de 86mm diámetro, abrazaderas de sujeción y cocodrilos ajustables.',
                 specs: ["hierro,lupa de cristal", "86 mm de diametro"]
             },
@@ -1737,7 +1743,7 @@
                 category: 'soldadura',
                 name: 'Pasta para soldar',
                 price: 20,
-                image: '',
+                image: 'images/pasta.png',
                 description: 'Esta pasta es de color ámbar y es completamente inodora e insoluble al agua No contiene plomo, lo que ayuda como limpiador el área a soldar sin agredir en el aspecto químico de los materiales intervenidos',
                 specs: [""]
             },
@@ -2395,7 +2401,7 @@
                 category: 'circuitos',
                 name: 'L293D (Control Motor)',
                 price: 3.5,
-                image: 'images/l293d.png',
+                image: 'images/l293.png',
                 description: 'Circuito integrado L293D (Control Motor)',
                 specs: ["Encapsulado DIP"]
             }
