Fix image paths for product listings in index.html

--- a/index.html
+++ b/index.html
@@ -1645,7 +1645,6 @@
                 category: 'kits',
                 name: 'Kit Brazo con Gripper',
                 price: 60,
-    
                 image: 'images/brazo.png',
                 description: 'Brazo robótico educativo de madera.',
                 specs: ['Material: Madera', 'Para armar', 'Proyecto educativo', 'Con pinza']
@@ -1735,7 +1734,7 @@
                 category: 'soldadura',
                 name: 'Tercera mano con lupa',
                 price: 70,
-                image: 'lupa.png',
+                image: 'images/lupa.png',
                 description: 'Soporte para sujetar Placa PCB de hierro multifuncional de alta Calidad Incluye lupa de cristal de 86mm diámetro, abrazaderas de sujeción y cocodrilos ajustables.',
                 specs: ["hierro,lupa de cristal", "86 mm de diametro"]
             },
