--- a/index.html
+++ b/index.html
@@ -763,8 +763,13 @@
                 <button class="btn-primary" onclick="document.getElementById('productos').scrollIntoView({behavior: 'smooth'})">
                     Ver Catálogo 🚀
                 </button>
-                <button class="btn-secondary" onclick="window.open('https://wa.me/59177032361', '_blank')">
-                    Consultar Whatsapp
+                <button class="contact-btn" style="margin-top: 1rem;" 
+                        onclick="window.open('https://maps.app.goo.gl/cKH53EbaUiGVkDqE9', '_blank')">
+                    🗺️ Ver en Mapa
+                </button>
+                </button>
+                <button class="btn-tertiary" onclick="document.getElementById('ubicacion').scrollIntoView({behavior: 'smooth'})">
+                    📍 Horarios de atencion
                 </button>
             </div>
         </div>
@@ -828,7 +833,7 @@
     </a>
 
     <!-- FOOTER -->
-    <footer class="footer">
+    <footer class="footer" id="ubicacion">
         <div class="footer-content">
             <div class="footer-section">
                 <h3>ATOM Electrónica y Robótica</h3>
