--- a/index.html
+++ b/index.html
@@ -253,6 +253,25 @@
             background: rgba(0, 217, 255, 0.1);
             transform: translateY(-3px);
         }
+        /* BOTÓN TERCIARIO - UBICACIÓN */
+        .btn-tertiary {
+            padding: 1rem 2.5rem;
+            background: transparent;
+            border: 2px solid #7ef07e;
+            border-radius: 30px;
+            color: #7ef07e;
+            font-size: 1.1rem;
+            font-weight: 700;
+            cursor: pointer;
+            transition: all 0.3s;
+            box-shadow: 0 4px 15px rgba(126, 240, 126, 0.2);
+        }
+        
+        .btn-tertiary:hover {
+            background: rgba(126, 240, 126, 0.1);
+            transform: translateY(-3px);
+            box-shadow: 0 6px 25px rgba(126, 240, 126, 0.4);
+        }
 
         /* FEATURES BANNER */
         .features-banner {
