Fix typos and update map links in index.html

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-badge">🎉 Envíos a toda Bolivia</div>
-            <div class="hero-badge">🎉 ImpresiÓn 3D</div>
+            <div class="hero-badge">🎉 Impresión 3D</div>
             <h1>Componentes Electrónicos<br>de Alta Calidad</h1>
             <p class="hero-subtitle">
                 Estamos en La Paz Bolivia, encuentra componentes para tus proyectos de robótica, IoT y electrónica.<br>
@@ -782,11 +782,11 @@
                 <button class="btn-primary" onclick="document.getElementById('productos').scrollIntoView({behavior: 'smooth'})">
                     Ver Catálogo 🚀
                 </button>
-                <button class="contact-btn" style="margin-top: 1rem;" 
-                        onclick="window.open('https://maps.app.goo.gl/cKH53EbaUiGVkDqE9', '_blank')">
+                <button class="btn-primary" style="margin-top: 1rem;"
+                    onclick="window.open('https://maps.app.goo.gl/ZDBzQQqY5aEscQ5T6', '_blank')">
                     🗺️ Ver en Mapa
                 </button>
-                <button class="btn-tertiary" onclick="document.getElementById('ubicacion').scrollIntoView({behavior: 'smooth'})">
+                <button class="btn-primary" onclick="document.getElementById('ubicacion').scrollIntoView({behavior: 'smooth'})">
                     📍 Horarios de atencion
                 </button>
             </div>
@@ -866,7 +866,7 @@
                 <h3>Ubicación</h3>
                 <p>📍 El Alto, Zona Villa Dolores<br>C4, Galería Candia, Local 7</p>
                 <button class="contact-btn" style="margin-top: 1rem;" 
-                        onclick="window.open('https://maps.app.goo.gl/cKH53EbaUiGVkDqE9', '_blank')">
+                        onclick="window.open('https://maps.app.goo.gl/ZDBzQQqY5aEscQ5T6', '_blank')">
                     🗺️ Ver en Mapa
                 </button>
             </div>
