--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@
             cursor: pointer;
             transition: all 0.3s;
             box-shadow: 0 4px 20px rgba(0, 217, 255, 0.4);
+            min-width: 260px;
+            height: 56px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            white-space: nowrap;
         }
 
         .btn-primary:hover {
