--- a/index.html
+++ b/index.html
@@ -779,10 +779,11 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-badge">🎉 Envíos a toda Bolivia</div>
-            <div class="hero-badge">🎉 Impresión 3D</div>
-            <h1>Componentes Electrónicos<br>de Alta Calidad</h1>
+            <div class="hero-badge">🎉 Servicio de Impresión 3D</div>
+            <h1>ATOM Electrónica & Robótica</h1>
             <p class="hero-subtitle">
-                Estamos en La Paz Bolivia, encuentra componentes para tus proyectos de robótica, IoT y electrónica.<br>
+                Somos una tienda de componentes para tus proyectos de robótica, IoT y electrónica.
+                Estamos ubicados en El Alto-La Paz-Bolivia.<br>
                 Más de 100+ productos disponibles.
             </p>
             <div class="hero-buttons">
@@ -791,7 +792,7 @@
                 </button>
                 <button class="btn-primary" style="margin-top: 1rem;"
                     onclick="window.open('https://maps.app.goo.gl/ZDBzQQqY5aEscQ5T6', '_blank')">
-                    🗺️ Ver en Mapa
+                    🗺️ Ver ubicación
                 </button>
                 <button class="btn-primary" onclick="document.getElementById('ubicacion').scrollIntoView({behavior: 'smooth'})">
                     📍 Horarios de atencion
