--- a/index.html
+++ b/index.html
@@ -780,11 +780,12 @@
         <div class="hero-content">
             <div class="hero-badge">🎉 Envíos a toda Bolivia</div>
             <div class="hero-badge">🎉 Servicio de Impresión 3D</div>
+            <div class="hero-badge">🎉 Componentes con la mejor calidad</div>
             <h1>ATOM Electrónica & Robótica</h1>
             <p class="hero-subtitle">
-                Somos una tienda de componentes para tus proyectos de robótica, IoT y electrónica.
-                Estamos ubicados en El Alto-La Paz-Bolivia.<br>
-                Más de 100+ productos disponibles.
+                Somos una tienda de componentes para tus proyectos de <strong>robótica, IoT y electrónica</strong>.
+                <span>📍 El Alto – La Paz, Bolivia</span>
+                <span>📦 Más de 100+ productos disponibles</span>
             </p>
             <div class="hero-buttons">
                 <button class="btn-primary" onclick="document.getElementById('productos').scrollIntoView({behavior: 'smooth'})">
