Add 9V battery and crystal component entries

--- a/index.html
+++ b/index.html
@@ -1694,6 +1694,22 @@
                 description: 'Tira de espadín hembra de paso 2.54mm, disponible en 40 Pines',
                 specs: [] 
             },
+            {
+                category: 'componentes',
+                name: 'Bateria de 9V',
+                price: 9,
+                image: 'images/bateria.png',
+                description: 'Bateria no recargable de 9V',
+                specs: [] 
+            },
+            {
+                category: 'componentes',
+                name: 'Bateria de 9V',
+                price: 9,
+                image: 'images/cristal.png',
+                description: 'Componentes electrónicos utilizados en circuitos osciladores. Estos oscilan a una frecuencia estable',
+                specs: ['Valores: 4Mhz'] 
+            },
 
             // KITS DIY
             {
