--- a/index.html
+++ b/index.html
@@ -1704,7 +1704,7 @@
             },
             {
                 category: 'componentes',
-                name: 'Bateria de 9V',
+                name: 'Cristal oscilador',
                 price: 9,
                 image: 'images/cristal.png',
                 description: 'Componentes electrónicos utilizados en circuitos osciladores. Estos oscilan a una frecuencia estable',
