--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
             .contact-number {
                 font-size: 0.9rem;
             }
+            .search-section {
+                display: none !important;
+            }
                     /* Hero más compacto */
             .hero {
                 min-height: auto !important;
