--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
             .search-section {
                 display: none !important;
             }
+            .search-icon {
+                display: none !important;
+            }
                     /* Hero más compacto */
             .hero {
                 min-height: auto !important;
