--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             transform: translateY(-50%);
             font-size: 1.2rem;
             pointer-events: none;
+            overflow: hidden; 
         }
         
         /* CONTACTO Y REDES */
@@ -309,7 +310,7 @@
             bottom: 20px;
             right: 20px;
         }
-    }
+        }
         
         @media (max-width: 480px) {
             .brand-text {
